SERVER-21434 Retry a findAndModify if it conflicts on an update or delete