jstests/concurrency/fsm_workloads/findAndModify_remove_queue.js
@@ -13,8 +13,6 @@
 var $config = (function() {
 
     var data =  {
-        numDocs: 1000,
-
         // Use the workload name as the database name, since the workload name is assumed to be
         // unique.
         uniqueDBName: 'findAndModify_remove_queue',
@@ -67,6 +65,8 @@ var $config = (function() {
             assertAlways.commandWorked(res);
 
             var doc = res.value;
+            assertWhenOwnColl.neq(
+                doc, null, 'findAndModify should have found and removed a matching document');
             if (doc !== null) {
                 this.saveDocId.call(this, db, collName, doc._id);
             }
@@ -83,6 +83,9 @@ var $config = (function() {
     };
 
     function setup(db, collName, cluster) {
+        // Each thread should remove exactly one document per iteration.
+        this.numDocs = this.iterations * this.threadCount;
+
         var bulk = db[collName].initializeUnorderedBulkOp();
         for (var i = 0; i < this.numDocs; ++i) {
             var doc = this.newDocForInsert(i);
@@ -101,6 +104,13 @@ var $config = (function() {
 
     function teardown(db, collName, cluster) {
         var ownedDB = db.getSiblingDB(db.getName() + this.uniqueDBName);
+
+        if (this.opName === 'removed') {
+            // Each findAndModify should remove exactly one document, and this.numDocs ==
+            // this.iterations * this.threadCount, so there should not be any documents remaining.
+            assertWhenOwnColl.eq(
+                db[collName].find().itcount(), 0, 'Expected all documents to have been removed');
+        }
 
         assertWhenOwnColl(function() {
             var docs = ownedDB[collName].find().toArray();
@@ -166,10 +176,9 @@ var $config = (function() {
         }
     }
 
-    var threadCount = 10;
     return {
-        threadCount: threadCount,
-        iterations: Math.floor(data.numDocs / threadCount),
+        threadCount: 10,
+        iterations: 100,
         data: data,
         startState: 'remove',
         states: states,
